--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
           font-family: Helvetica;
           color: #FFF;
         }
-          svg{ background: #333333 url('../img/bkg.jpg') no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
+          svg{ background: #333333 url('img/bkg.jpg') no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
 
         circle {
           fill: none;
