--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <h1>who</h1>
         <p>We are Vizzuality, a small company that works in stories that matter. More in our <a href="http://vizzuality.com">website</a>.
         <p>Music by Jeroen Tel / Maniacs of Noise, available <a href="http://remix.kwed.org/?search_id=4500">here</a></p>
-        <p>Thanks to <a href="http://twitter.com/#!/BlurSpline">@BlurSpline</a> by <a href="https://github.com/zz85/audiokeys.js">Audiokeys.js</a> library and <a href="http://bost.ocks.org/mike/">Mike Bostock</a> for creating D3.</p>
+        <p>Thanks to <a href="http://twitter.com/#!/BlurSpline">@BlurSpline</a> for <a href="https://github.com/zz85/audiokeys.js">Audiokeys.js</a> library and <a href="http://bost.ocks.org/mike/">Mike Bostock</a> for creating D3.</p>
       </div>
 
     </div>
