--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="box">
         <h1>what</h1>
         <p>This is a little demo showing what we had prepared for our spainjs talk.</p>
-        <p>Unfortunately our talk has not been accepted, we will try next year.</p>
+        <p>Unfortunately our talk has not been accepted, we will try again next year.</p>
       </div>
 
       <div class="box">
